# STAGE

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: DRIVES_traj.ipynb  cbgses-Copy1.ipynb  cbgses.ipynb  demo.ipynb
scripts/: evacmob_cli.py  make_map.py  run_pipeline.py
scripts/slurm/: run_pipeline.sbatch
src/evacmob/: __init__.py  data.py  preprocess.py  report.py  simulate.py  visualize.py
src/evacmob/notebooks/: DRIVES_traj.py  Report_results.py  cbgses-Copy1.py  cbgses.py  demo.py  visualize_0822.py
tests/: test_import.py
